# strongSwan

./: configure.ac
src/: Makefile.am
src/aikgen2/: .gitignore  Makefile.am  aikgen2.c
